# Tecker_v2

./: .env.example  .gitignore  README.md  docker-compose.yml  ec2_locust_report.html  ec2_locust_report_failures.csv  ec2_locust_report_stats.csv  ec2_locust_report_stats_history.csv  mypy.ini  pyproject.toml  pytest.ini  ruff.toml  tecker_v2_locust_100vu.html  tecker_v2_locust_100vu_stats.csv  tecker_v2_locust_100vu_stats_history.csv
.github/workflows/: ci.yml
apps/accounts/: models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/anti_spoofing_server/: .dockerignore  Dockerfile  app.py  requirements.txt
apps/core/: cache.py  metrics.py  models.py
apps/events/: apps.py  models.py  queries.py  serializers.py  signals.py  urls.py  views.py
apps/tickets/: exceptions.py  metrics.py  models.py  tasks.py  urls.py  views.py
config/: celery.py  urls.py
config/settings/: base.py  dev.py  prod.py  test.py
docker/: celery.Dockerfile  web.Dockerfile
monitoring/: alert_rules.yml  nginx.conf  prometheus.yml
scripts/: check_auth_classes.py
tests/: conftest.py  test_antispoof.py  test_booking_concurrency.py  test_certification.py  test_events_api.py  test_events_cache.py  test_events_detail.py  test_face_check.py  test_face_register.py  test_metrics.py  test_models.py  test_oauth.py  test_pay_view.py  test_release.py  test_seats_api.py  test_ticket_cancel.py  test_ticket_qr.py  test_ticket_share.py  test_tickets_api.py
tests/factories/: __init__.py
tests/integration/: test_healthz.py
tests/load/: double_book.py  mixed.py
(+25 files in other folders)
