[project]
name = "tecker-backend-v2"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
  "django>=5.0,<5.2",
  "djangorestframework>=3.15",
  "djangorestframework-simplejwt>=5.3",
  "dj-rest-auth[with_social]>=6.0",
  "django-allauth>=0.61",
  "django-cors-headers>=4.3",
  "django-prometheus>=2.3",
  "django-redis>=5.4",
  "celery[redis]>=5.4",
  "gunicorn>=22",
  "mysqlclient>=2.2",
  "boto3>=1.34",
  "Pillow>=10.3",
  "qrcode>=7.4",
  "tenacity>=8.3",
  "python-dotenv>=1.0",
  "drf-spectacular>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8", "pytest-django>=4.8", "pytest-cov>=5",
  "pytest-benchmark>=4", "factory-boy>=3.3", "freezegun>=1.5",
  "responses>=0.25", "moto>=5", "locust>=2.27",
  "django-silk>=5.1", "ruff>=0.5", "mypy>=1.10", "bandit>=1.7",
  "pre-commit>=3.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*"]
